main text animation 5sec long

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
     Website doesn't work when JavaScript disabled. Please enable JavaScript
   </noscript>
 
-  <img class="main-page-bg" src="./images/illustrations/main-bg.svg" alt="">
+  <img class="main-page-bg fadeIn" src="./images/illustrations/main-bg.svg" alt="">
 
   <header class="header">
     <div class="container flex-between">
@@ -74,12 +74,24 @@
   <main>
     <section id="home" class="home">
       <div class="container">
-        <p class="home-text">
-          <span class="home-text__part-1">We build solutions </span>
-          <span class="home-text__part-2">for Machine Generated </span>
-          <span class="home-text__part-3">Data & Industrial IoT</span>
+        <p class="home-text fadeIn">
+          <span class="home-text__part-1">
+            <span class="home-text__part-1_animated home-text__part-1_animated_1">We</span>
+            <span class="home-text__part-1_animated home-text__part-1_animated_2">build</span>
+            <span class="home-text__part-1_animated home-text__part-1_animated_3">solutions</span>
+          </span>
+          <span class="home-text__part-2">
+            <span class="home-text__part-2_animated home-text__part-2_animated_1">for</span>
+            <span class="home-text__part-2_animated home-text__part-2_animated_2">Machine</span>
+            <span class="home-text__part-2_animated home-text__part-2_animated_3">Generated</span>
+          </span>
+          <span class="home-text__part-3">
+            <span class="home-text__part-3_animated home-text__part-3_animated_1">Data &</span>
+            <span class="home-text__part-3_animated home-text__part-3_animated_2">Industrial</span>
+            <span class="home-text__part-3_animated home-text__part-3_animated_3">IoT</span>
+          </span>
         </p>
-        <a href="./contacts.html" class="home__startbtn blue-link start_project_button">
+        <a href="./contacts.html" class="home__startbtn blue-link start_project_button fadeIn">
           <div class="blue-link-arrow__top-part"></div>
           <div class="blue-link-arrow__bottom-part"></div>
           Start the project
