--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 
     <section id="about" class="about">
       <div class="container">
+        <div class="about-background"></div>
         <div class="about-content">
           <img class="about__mobile-img" src="images/aboutus-bg-mobile.svg" alt="about-us mobile tech graphics">
           <p class="about-content-text">
@@ -400,7 +401,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer id="footer" class="footer">
       <div class="container footer-content">
         <a href="index.html" class="footer-content__logo">
           <img src="images/logos/logo-blue.svg" alt="ARS Data logo">
