--- a/app/index.html
+++ b/app/index.html
@@ -108,10 +108,19 @@
           <p class="about-content-text">
             Focus on one domain — Machine Generated Data.
             <span class="about-content-text__part">
-              We provide <a href="#technology" class="about-content-text__link">Data Science</a>
-              <span class="coma">,</span>
-              <a href="#technology" class="about-content-text__link">Data Engineering</a> and
-              <a href="#technology" class="about-content-text__link">Embedded development</a> services to yield value
+              We provide
+              <span class="about-content-text-animbox about-content-text-animbox_1">
+                <a href="#technology" class="about-content-text__link about-content-text__link_1">Data Science</a>
+              </span>
+              <!-- <span class="coma">,</span> -->
+              <span class="about-content-text-animbox about-content-text-animbox_2">
+                <a href="#technology" class="about-content-text__link about-content-text__link_2">Data Engineering</a>
+              </span>
+              and
+              <span class="about-content-text-animbox about-content-text-animbox_3">
+                <a href="#technology" class="about-content-text__link about-content-text__link_3">Embedded development</a>
+              </span>
+              services to yield value
               from
               data:
               OPEX improvement, uptime, decisions quality.
