about-us page animations add

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -68,7 +68,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="aboutUsPage">
 
     <section class="about-page">
       <div class="container flex-between">
@@ -99,6 +99,7 @@
     </section>
 
     <section id="contact" class="contact">
+      <div class="contact-background"></div>
       <div class="container">
         <div class="contact-content">
 
