--- a/app/contacts.html
+++ b/app/contacts.html
@@ -70,9 +70,9 @@
     </div>
   </header>
 
-  <main>
+  <main id="contactsPage">
 
-    <section class="contact-page">
+    <section id="contactPage" class="contact-page">
       <div class="container flex-between">
         <div class="contact-page-content contact-page-content_1">
           <h2 class="contact-page-content-title">
