--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="homePage">
     <section id="home" class="home">
       <div class="container">
         <p class="home-text fadeIn">
