progress circle add + tech + solutions + 404 animations

--- a/app/404.html
+++ b/app/404.html
@@ -67,7 +67,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="pageNotFound">
 
     <section class="nopage">
       <div class="container flex-center">
