--- a/app/solutions.html
+++ b/app/solutions.html
@@ -211,6 +211,7 @@
     </section>
 
     <section id="contact" class="contact">
+      <div class="contact-background"></div>
       <div class="container">
         <div class="contact-content">
 
@@ -238,17 +239,20 @@
               <div class="form-input-box">
                 <input id="formname" name="n" type="text" class="form-input-box__input" type="text" placeholder="Name"
                   required>
+                  <span class="form-input-box__border"></span>
                 <label for="n" id="formNameLable" class="form-input-box__lable"></label>
               </div>
 
               <div class="form-input-box">
                 <input id="formemail" name="e" type="email" class="form-input-box__input" placeholder="Email" required>
+                <span class="form-input-box__border"></span>
                 <label for="e" id="formEmailLable" class="form-input-box__lable"></label>
               </div>
 
               <div class="form-textarea-box">
                 <textarea id="formmessage" name="m" id="message-textarea" cols="30" rows="3"
                   placeholder="Message"></textarea>
+                  <span class="form-textarea-box__border"></span>
                 <button type="submit" name="submit_message" class="form-textarea-box__btn send_button"
                   id="submit-button" soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">Send</button>
               </div>
