--- a/app/terms-and-conditions.html
+++ b/app/terms-and-conditions.html
@@ -463,6 +463,12 @@
       onClick="ArsModule.handleCookiesPopUp('hide')">accept</button>
   </div>
 
+  <div class="progress-wrap">
+    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+    </svg>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
   <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
