animations + layout fixes + new meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -8,18 +8,15 @@
 
   <title>ARS Data</title>
 
-  <meta name="keywords" content="ARS Data, Data sience, Big data, Embedded, HVAC, Maintenance">
-  <meta name="author" content="EarlyBird">
   <meta name="robots" content="index,follow">
-  <meta name="description" content="ARS Data website">
-  <meta name="twitter:description" content="ARS Data website">
+  <meta name="description" content="Software solutions for Machine Generated Data and Industrial IoT">
+  <meta name="twitter:description" content="Software solutions for Machine Generated Data and Industrial IoT">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="ARS Data">
-  <meta property="og:url" content="">
-  <meta property="og:site_name" content="ARS Data">
+  <meta property="og:url" content="[https://www.arsdata.io](https://arsdata.io/)">
   <meta property="og:type" content="website">
   <meta property="og:title" content="ARS Data">
-  <meta property="og:description" content="ARS Data website">
+  <meta property="og:description" content="Software solutions for Machine Generated Data and Industrial IoT">
 
   <!-- Google Analytics -->
   <script>
@@ -76,12 +73,14 @@
       <div class="container">
         <p class="home-text fadeIn">
           <span class="home-text__part-1">
-            <span class="home-text__part-1_animated home-text__part-1_animated_1">We</span>
+            We build solutions
+            <!-- <span class="home-text__part-1_animated home-text__part-1_animated_1">We</span>
             <span class="home-text__part-1_animated home-text__part-1_animated_2">build</span>
-            <span class="home-text__part-1_animated home-text__part-1_animated_3">solutions</span>
+            <span class="home-text__part-1_animated home-text__part-1_animated_3">solutions</span> -->
           </span>
           <span class="home-text__part-2">
-            <span class="home-text__part-2_animated home-text__part-2_animated_1">for</span>
+            for
+            <!-- <span class="home-text__part-2_animated home-text__part-2_animated_1">for</span> -->
             <span class="home-text__part-2_animated home-text__part-2_animated_2">Machine</span>
             <span class="home-text__part-2_animated home-text__part-2_animated_3">Generated</span>
           </span>
@@ -442,7 +441,6 @@
   </div>
 
   <!-- <div id="cursor"></div> -->
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
