--- a/app/contacts.html
+++ b/app/contacts.html
@@ -8,18 +8,15 @@
 
   <title>ARS Data</title>
 
-  <meta name="keywords" content="ARS Data, Data sience, Big data, Embedded, HVAC, Maintenance">
-  <meta name="author" content="EarlyBird">
   <meta name="robots" content="index,follow">
-  <meta name="description" content="ARS Data website">
-  <meta name="twitter:description" content="ARS Data website">
+  <meta name="description" content="Software solutions for Machine Generated Data and Industrial IoT">
+  <meta name="twitter:description" content="Software solutions for Machine Generated Data and Industrial IoT">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="ARS Data">
-  <meta property="og:url" content="">
-  <meta property="og:site_name" content="ARS Data">
+  <meta property="og:url" content="[https://www.arsdata.io](https://arsdata.io/)">
   <meta property="og:type" content="website">
   <meta property="og:title" content="ARS Data">
-  <meta property="og:description" content="ARS Data website">
+  <meta property="og:description" content="Software solutions for Machine Generated Data and Industrial IoT">
 
   <!-- Google Analytics -->
   <script>
@@ -43,8 +40,6 @@
   <noscript>
     Website doesn't work when JavaScript disabled. Please enable JavaScript
   </noscript>
-
-  <!-- <img class="contact-page-bg" src="./images/illustrations/contact-page-bg-img.svg" alt=""> -->
 
   <header class="header">
     <div class="container flex-between">
